--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^2.2.1",
+    "@privy-io/react-auth": "^2.3.0",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
+    "axios": "^1.7.9",
     "framer-motion": "^12.2.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
