--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "ipfs-http-client":"^60.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
