--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,5 +3,11 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install --force",
   "framework": "vite",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 } 
